<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/priority"
        android:textSize="18sp"
        android:textAppearance="@style/Widget.AppCompat.ActionBar.Solid"
        android:background="#FA9E9E"
        android:padding="10dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="50dp">

        <RadioButton
            android:id="@+id/high"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/high_priority"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/low"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/low_priority"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/none"
            android:textSize="16sp"/>
    </RadioGroup>
</LinearLayout>