<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginEnd="0dp"
    android:layout_marginRight="0dp">

    <EditText
        android:id="@+id/add_note"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/add_notes"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_note"
        android:clickable="true"
        android:text="@string/save_notes"
        android:layout_marginLeft="2dp"
        app:backgroundTint="#32B137"
        android:focusable="true" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_note"

        android:layout_marginStart="60dp"
        android:layout_marginLeft="170dp"
        android:layout_toRightOf="@+id/button"
        android:clickable="true"
        android:text="@string/cancel"
        app:backgroundTint="#E62E2E"
        android:focusable="true" />
</RelativeLayout>