<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="418dp"
        android:layout_height="179dp"
        android:background="#FA9E9E"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/BackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:focusable="true"
            android:src="@drawable/abc_vector_test"
            app:backgroundTint="@android:color/transparent"
            android:paddingLeft="20sp"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="357dp"
            android:layout_height="41dp"
            android:layout_gravity="end"
            android:text="@string/task_name"
            android:textAppearance="@style/Widget.AppCompat.ActionBar.Solid"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="357dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/title" />
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#EDB406"
        android:clickable="true"
        android:contentDescription="@string/todo"
        android:focusable="true"
        app:srcCompat="@drawable/ic_baseline_check_24"
        app:backgroundTint="#FFBF00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.229" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:paddingTop="188dp"
        android:paddingBottom="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <ListView
            android:id="@+id/listview"
            android:layout_width="402dp"
            android:layout_height="511dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="10.0sp">


        </ListView>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>